--- a/03-componentes/src/app/pages/inicio/inicio.page.html
+++ b/03-componentes/src/app/pages/inicio/inicio.page.html
@@ -1,15 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Componentes</ion-title>
+    <ion-title color="primary">Componentes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button routerLink="/alert">
-    Alert
-  </ion-button>
-
-  <ion-button routerLink="/action-sheet">
-    action Sheet
-  </ion-button>
+  <ion-list>
+    <ion-item *ngFor="let c of components" [routerLink]="c.redirectTo" [detail]="true">
+      <ion-icon [name]="c.icon" slot="start" color="primary"></ion-icon>
+      {{ c.name }}
+    </ion-item>
+  </ion-list>
 </ion-content>
